# fake-ipmistack

./: CMakeLists.txt  LICENCE  README  README.md
include/fake-ipmistack/: fake-ipmistack.h  helper.h  netfn_app.h  netfn_chassis.h  netfn_sensor.h  netfn_storage.h  netfn_transport.h
lib/: CMakeLists.txt  helper.c  netfn_app.c  netfn_chassis.c  netfn_sensor.c  netfn_storage.c  netfn_transport.c
src/: CMakeLists.txt  fake-ipmistack.c
